# Challenges

./: README.md
16bitvm/: a.out  main.c
dsa/btree/: a.out  btree.c
dsa/compression/: huffman.go
dsa/dynamic_array/: dynamic_array.h
dsa/hashtable/: hashtable.c  hashtable.h  hashtest.c  test.txt
dsa/piece_table/: a.out  piece_table.c  piece_table.h  test.c
logicsim/: .gitignore  CMakeLists.txt
logicsim/include/: draggable_rect.h  gate_terminal.h  gate_terminal_manager.h  logic_gate.h  truth_table.h  utils.h
logicsim/save/: gate_terminal_manager.c  gate_terminal_manager.h
logicsim/src/: draggable_rect.c  gate_terminal_manager.c  logic_gate.c  main.c  truth_table.c  utils.c
smcompiler/: a.out  lexerTest.txt  resources.md  run.sh  test.txt
smcompiler/include/: lexer.h  parser.h
smcompiler/src/: lexer.c  main.c
texteditor/: .gitignore  Makefile  Readme.md  run.sh  test2.txt
texteditor/include/: dyarray.h  editor.h  piece_table.h  terminal.h  utils.h
texteditor/save/: edit.c  edit.txt  help.txt  main.c  piece_table.c  piece_table.h
texteditor/src/: editor.c  main.c  piece_table.c  terminal.c  utils.c
